--- a/kap1.tex
+++ b/kap1.tex
@@ -381,7 +381,17 @@ Jedes Folgeglied einer solchen Folge ist das geometrische Mittel seines Vorgäng
 	\subsection{Monotonie}
 
 \begin{Definition}
-	Eine Folge $(a_n)_{n\in\N}$ heißt monoton \begin{cases} \text{\textcolor{red}{steigend/wachsend}}\\\text{\textcolor{orange}{fallend/abnehmend}}\end{cases} wenn \begin{cases} \textcolor{red}{a_{n+1}\geq a_n}\\\textcolor{orange}{a_{n+1}\leq a_n}\end{cases}.\\\\
+	Eine Folge $(a_n)_{n\in\N}$ heißt monoton
+	$\begin{cases}
+		\text{\textcolor{red}{steigend/wachsend}} \\
+		\text{\textcolor{orange}{fallend/abnehmend}}
+	\end{cases}$
+	wenn
+	$\begin{cases}
+		\textcolor{red}{a_{n+1}\geq a_n} \\
+		\textcolor{orange}{a_{n+1}\leq a_n}
+	\end{cases}$.
+	
 	Gelten dabei sagar \textbf{strikte} Ordnungsrelationen ($>$ oder $<$), dann ist $(a_n)$ \textbf{streng} monoton wachsend bzw. abnehmend.
 \end{Definition}
 
