The compiler is picky

--- a/kap1.tex
+++ b/kap1.tex
@@ -413,20 +413,38 @@ Jedes Folgeglied einer solchen Folge ist das geometrische Mittel seines Vorgäng
 
 	$\Rightarrow \, a_n$ ist für $n\in\N$ weder steigend noch fallend.
 	
-	\indent $a_n$ ist für $n\in\N^*$ streng monoton fallend.
+	\indent $a_n$ ist für $n \in \N^*$ streng monoton fallend.
 \end{Beispiel}
 
 	\subsection{Beschränktheit}
 
 \begin{Definition}
-Man nennt eine  Folge $(a_n)n\in\N$ nach  \begin{cases} \text{\textcolor{red}{oben}}\\\text{\textcolor{orange}{unten}}\end{cases} \textbf{beschränkt}\\ wenn es eine Zahl  \begin{cases} \textcolor{red}{S\in\R}\\\textcolor{orange}{s\in\R}\end{cases} gibt mit  \begin{cases} \textcolor{red}{a_n\leq S}\\\textcolor{orange}{a_n\geq s}\end{cases} $\forall n\in\N$.\\\\
+Man nennt eine Folge $(a_n)n \in \N$ nach
+$\begin{cases}
+	\text{\textcolor{red}{oben}} \\
+	\text{\textcolor{orange}{unten}}
+\end{cases}$
+\textbf{beschränkt}
+
+wenn es eine Zahl
+$\begin{cases}
+	\textcolor{red}{S \in \R} \\
+	\textcolor{orange}{s \in \R}
+\end{cases}$
+gibt mit
+$\begin{cases}
+	\textcolor{red}{a_n \leq S} \\
+	\textcolor{orange}{a_n \geq s}
+\end{cases}$
+$\forall n \in \N$.
+
 \textcolor{red}{$S$} ist eine \textcolor{red}{obere }Schranke\\
 \textcolor{orange}{$s$} ist eine \textcolor{orange}{untere} Schranke
 \end{Definition}
 
 \begin{Definition}
-Die kleinste obere Schranke ist das \textbf{Supremum} der Menge $\{a_n;n\in\N\}$.\\
-Die größte untere Schranke ist das \textbf{Infimum} der Menge $\{a_n;n\in\N\}$.
+Die kleinste obere Schranke ist das \textbf{Supremum} der Menge $\{ a_n ; n \in \N \}$.\\
+Die größte untere Schranke ist das \textbf{Infimum} der Menge $\{a_n;n \in \N \}$.
 \end{Definition}
 
 
