--- a/kap1.tex
+++ b/kap1.tex
@@ -404,11 +404,11 @@ Jedes Folgeglied einer solchen Folge ist das geometrische Mittel seines Vorgäng
 \begin{Beispiel}
 	Untersucht wird die Monotonie der Folge $a_n=\dfrac{8n}{n^2+1}$.
 	\begin{align*}
-		a_{n+1}-a_n&=\dfrac{8(n+1)}{(n+1)^2+1}-\dfrac{8n}{n^2+1}\\
+		a_{n+1}-a_{n}&=\dfrac{8(n+1)}{(n+1)^2+1}-\dfrac{8n}{n^2+1}\\
 		&=\dfrac{8n+8}{n^2+2n+1+1}-\dfrac{8n}{n^2+1}\\
 		&=\dfrac{8n^3+8n^2+8n+8-(8n^3+16n^2+16n)}{(n^2+2n+2)(n^2+1)}\\
 		&=\dfrac{-8n^2-8n+8}{(n^2+2n+2)(n^2+1)}\\
-		&=-\underbrace{\dfrac{8(n^2+n-1)}{(n^2+2n+2)(n^2+1)}}_{\geq2\forall n\in \N}<0\text{ für } (n^2+n+1)>0\Leftrightarrow \text{ für } $(n\geq 1)$ (weil $n\in\N$)
+		&=-\underbrace{\dfrac{8(n^2+n-1)}{(n^2+2n+2)(n^2+1)}}_{\geq2\forall n\in \N}<0\text{ für } (n^2+n+1)>0\Leftrightarrow \text{ für } (n\geq 1) (\text{weil } n \in \N)
 	\end{align*}
 
 	$\Rightarrow \, a_n$ ist für $n\in\N$ weder steigend noch fallend.
