--- a/kap1.tex
+++ b/kap1.tex
@@ -449,7 +449,7 @@ Die größte untere Schranke ist das \textbf{Infimum} der Menge $\{a_n;n \in \N 
 
 
 \begin{Definition}
-Eine nach \textbf{oben und unten} beschränkte Folge heißt \textbf{beschränkte} Folge (suite bornée).}
+Eine nach \textbf{oben und unten} beschränkte Folge heißt \textbf{beschränkte} Folge (suite bornée).
 \end{Definition}
 
 \begin{Beispiel}
