--- a/kap1.tex
+++ b/kap1.tex
@@ -457,7 +457,7 @@ Eine nach \textbf{oben und unten} beschränkte Folge heißt \textbf{beschränkte
 \definecolor{rvwvcq}{rgb}{0.08235294117647059,0.396078431372549,0.7529411764705882}
 \definecolor{sexdts}{rgb}{0.1803921568627451,0.49019607843137253,0.19607843137254902}
 \definecolor{wrwrwr}{rgb}{0.3803921568627451,0.3803921568627451,0.3803921568627451}
-\begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1cm,y=1cm;scale=0.5]
+\begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1cm,y=1cm,scale=0.5]
 \begin{axis}[
 x=1cm,y=1cm,
 axis lines=middle,
@@ -516,7 +516,8 @@ $a_n=\dfrac{n^2}{n+2}\geq\dfrac{n^2}{n+2n}=\dfrac{n^2}{3n}=\dfrac{1}{3}n\qquad\f
 	\subsection{Konvergenz}
 
 \begin{Definition}
-Eine Folge $(a_n)n\in\N$ ist konvergent, wenn sie einen Grenzwert besitzt.\\
+Eine Folge $(a_n)n\in\N$ ist konvergent, wenn sie einen Grenzwert besitzt.
+
 Man sagt $a_n$ konvergiert gegen $g=\lim\limits_{n\to\infty}a_n$.
 \end{Definition}
 
@@ -530,9 +531,11 @@ $$\lim\limits_{n\to\infty}a_n=g\Leftrightarrow \lim\limits_{n\to\infty}(a_n-g)=0
 \underline{Wörtlich:} Eine Folge $(a_n)$ konvergiert gegen $g$ genau dann, wenn $(a_n-g)$ gegen den Wert $0$ konvergiert.
 
 \begin{Beispiel}
-$a_n=\dfrac{3n^4-1}{n^4}$\\\\
-$a_n$ hat vermutlich den Grenzwert $g=3$.\\\\
-$a_n-3=\dfrac{3n^4-1}{n^4}-3=\dfrac{3n^4-1-3n^4}{n^4}=-\dfrac{1}{n^4}\underrightarrow{n\rightarrow \infty}0$
+	$a_n=\dfrac{3n^4-1}{n^4}$
+
+	$a_n$ hat vermutlich den Grenzwert $g=3$.
+
+	$a_n-3=\dfrac{3n^4-1}{n^4}-3=\dfrac{3n^4-1-3n^4}{n^4}=-\dfrac{1}{n^4}\underrightarrow{n\rightarrow \infty}0$
 \end{Beispiel}
 \subsubsection{Monotone Konvergenz}
 
@@ -542,29 +545,30 @@ Eine monotone Folge ist genau dann konvergent, wenn sie beschränkt ist.
 \end{Theorem}
 
 \begin{Beweis}
-Ohne Beschränkung der Allgemeinheit nehmen wir an, dass die Folge monoton wachsend sei und sei $a$ die kleinste obere Schranke (Supremum).
-\begin{itemize}
-\item Sei $\varepsilon\geq0$ dann ist $a-\varepsilon$ keine obere Schranke der Folgeglieder $\{a_n;n\in\N\}$.
-\item $(a_n)$ ist wachsend
-\item $\exists n_0\in\N$ mit $a_{n_{0}} \geq a-\varepsilon$
-\item $\forall n>n_0$ gilt $a-\varepsilon<a_{n_{0}}\leq a_n<a+\varepsilon$\qquad|$-a$\\
-$\qquad\qquad\Leftrightarrow -\varepsilon < a_{n_{0}}-a\leq a_n-a<\varepsilon$
-\item $\Rightarrow \lim\limits_{n\to\infty}a_n=a$
-\end{itemize}
-Analog kann man mit einer nach unten beschränkten monoton fallenden Folge argumentieren.
+	Ohne Beschränkung der Allgemeinheit nehmen wir an, dass die Folge monoton wachsend sei und sei $a$ die kleinste obere Schranke (Supremum).
+	\begin{itemize}
+		\item Sei $\varepsilon\geq0$ dann ist $a-\varepsilon$ keine obere Schranke der Folgeglieder $\{a_n;n\in\N\}$.
+		\item $(a_n)$ ist wachsend
+		\item $\exists n_0\in\N$ mit $a_{n_{0}} \geq a-\varepsilon$
+		\item $\forall n>n_0$ gilt $a-\varepsilon<a_{n_{0}}\leq a_n<a+\varepsilon$\qquad|$-a$
+		
+			$\qquad\qquad\Leftrightarrow -\varepsilon < a_{n_{0}}-a\leq a_n-a<\varepsilon$
+		\item $\Rightarrow \lim\limits_{n\to\infty}a_n=a$
+	\end{itemize}
+	Analog kann man mit einer nach unten beschränkten monoton fallenden Folge argumentieren.
 \end{Beweis}
 
 Besser zu verstehen, wenn man es so sagt:
 
 \begin{Theorem}
-$$\exists\, S\in\R \quad \exists \,n_0\in\N \quad \forall n\geq n_0\,:\, a_n\leq a_{n+1}\; \land \; a_n\leq S$$
-$$\Rightarrow \exists\, g\in\R \,:\, \lim\limits_{n\to\infty}a_n=g\;\land\; g\leq S $$
- \begin{center}und\end{center}
-$$\exists \, s\in\R \quad\exists \, n_0\in\N \quad \forall n\geq n_0\,:\, a_n\geq a_{n+1}\; \land \;a_n\geq s$$
-$$\Rightarrow \exists \, g\in\R \,:\, \lim\limits_{n\to\infty}a_n=g\;\land\; g\geq s$$
+	$$\exists\, S\in\R \quad \exists \,n_0\in\N \quad \forall n\geq n_0\,:\, a_n\leq a_{n+1}\; \land \; a_n\leq S$$
+	$$\Rightarrow \exists\, g\in\R \,:\, \lim\limits_{n\to\infty}a_n=g\;\land\; g\leq S $$
+	\begin{center}und\end{center}
+	$$\exists \, s\in\R \quad\exists \, n_0\in\N \quad \forall n\geq n_0\,:\, a_n\geq a_{n+1}\; \land \;a_n\geq s$$
+	$$\Rightarrow \exists \, g\in\R \,:\, \lim\limits_{n\to\infty}a_n=g\;\land\; g\geq s$$
 \end{Theorem}
 
-	\underline{Wörtlicch:}
+	\underline{Wörtlich:}
 \begin{itemize}
 \item Eine monoton \textbf{wachsende} Folge $(a_n)$ ist genau dann \textbf{konvergent}, wenn sie nach \textbf{oben beschränkt} ist. Ihr Grenzwert $g$ ist kleiner oder gleich der oberen Schranke $S\in\R$.
 \item  Eine monoton \textbf{fallende} Folge $(a_n)$ ist genau dann \textbf{konvergent}, wenn sie nach \textbf{unten beschränkt} ist. Ihr Grenzwert $g$ ist größer oder gleich der oberen Schranke $s\in\R$.
