--- a/kap1.tex
+++ b/kap1.tex
@@ -868,12 +868,12 @@ ytick={-4,-3,...,4},]
 			&=\dfrac{13}{15+9n}
 		\end{align*}
 	\item
-		$\begin{array}{cccc}
-		&\dfrac{13}{15+9n}&<&\varepsilon\\
-		\Leftrightarrow&13&<&\varepsilon(15+9n)\\
-		\Leftrightarrow&13-15\epsilon&<&9n\varepsilon\\
-		\Leftrightarrow&n&>&\dfrac{13-15\varepsilon}{9\varepsilon}\\
-		\end{array}$
+		\begin{array}{cccc}
+			& $\dfrac{13}{15+9n}$ & $<$ & $\varepsilon$ \\
+			$\Leftrightarrow$ & $13$ & $<$ & $\varepsilon(15+9n)$ \\
+			$\Leftrightarrow$ & $13-15\epsilon$ & $<$ & $9n\varepsilon$ \\
+			$\Leftrightarrow$ & $n$ & $>$ & $\dfrac{13-15\varepsilon}{9\varepsilon}$ \\
+		\end{array}
 	\item $n_0=\left\lceil \dfrac{13-15\varepsilon}{9\varepsilon}\right\rceil$
 	\item Sei $\varepsilon$ beliebig und $n\geq n_0$, dann gilt $|a_n-g|=\left|\dfrac{1-2n}{5+3n}+\dfrac{2}{3}\right|=\dfrac{13}{15+9n}<\epsilon$
 \end{itemize}
